examples/test/testpolicy13127.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13127
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key32: value40
      key13: value22
      key0: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value26
      podSelector:
        matchLabels:
          key24: value42
          key12: value43
          key44: value6
